--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,22 @@
   box-sizing: border-box;
   font-size: 20px;
 }
+:root {
+  --color-text: rgba(255, 255, 255, 0.757);
+  --width-size: 100%;
+}
 
 body {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #906f78;
+  background-image: url(https://i.pinimg.com/736x/20/f1/9b/20f19be6776c52fbffdea8d80c65b140.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: var(--color-text);
 }
 
 h2 {
@@ -18,13 +28,16 @@ main {
   display: flex;
   flex-direction: column;
   min-width: 320px;
-  width: 100%;
+  width: var(--width-size);
   max-width: 800px;
+  margin: 30px;
+  padding: 30px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 2);
+  gap: 20px;
 }
+
 label {
-  width: 100%;
   display: flex;
-  gap: 10px;
   justify-content: space-between;
   padding: 5px;
 }
@@ -34,21 +47,55 @@ input {
   outline: none;
 }
 
+select {
+  min-width: 200px;
+}
+
+.form-line {
+  height: 1px;
+  background-color: #ccc;
+  width: var(--width-size);
+  margin: 20px 0;
+}
+
 button {
-  width: 100%;
+  display: block;
+  width: 80%;
+  background-color: transparent;
+  border: 2px solid white;
+  color: var(--color-text);
+  padding: 10px 20px;
+  margin: 10px auto 0;
+  cursor: pointer;
 }
 
-/*input:valid {
-  border: 2px solid purple;
+button:hover {
+  background-color: rgba(0, 0, 0, 0.4);
 }
-input:invalid {
-  border: 2px solid pink;
-}
-*/
 
-.valid {
+input:valid {
   border: 2px solid green;
 }
-.invalid {
+input:invalid {
   border: 2px solid red;
+}
+
+.input-container {
+  min-width: 200px;
+  width: 60%;
+  max-width: 500px;
+}
+
+.phone,
+.name-container {
+  display: flex;
+  gap: 10px;
+}
+
+.nameInput {
+  width: var(--width-size);
+}
+
+.messageTextArea {
+  min-height: 100px;
 }
